--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,7 +137,7 @@
     
         <div class="doctor-card">
           <h2 class="doctor-name">
-            {{ doctor.name }} <span class="doctor-title">{{ doctor.qualification }}</span>
+            {{ doctor.name }} <br><span class="doctor-title">{{ doctor.qualification }}</span>
           </h2>
     
           <!-- Specialization and Experience -->
