--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -84,7 +84,7 @@
                 <div class="container_2_heading">Our Objective</div>
                 <div class="container_2_para">We continuously examine the services which we provide regularly. We also check for the improvements needed in the community. We are at constant lookup for any damages or impairments required to our health care system, repair it and move to other repairments whenever compulsory. We approach for team effort and make quality and intentional decisions to improve our services to patients and also let them feel comfortable, positive contribution. We make them experience the best possible medications and treatments that we can accomplish.</div>
             </div>
-            <div class="container_2_image">
+            <div class="container_2_image container_2_image_1">
                 <img src="../../assets/about/container_2_img_1.png" alt="">
             </div>
         </div>
@@ -93,7 +93,7 @@
                 <div class="container_2_heading">Oaths and Commitments</div>
                 <div class="container_2_para">We prefer giving the community with team efforts. Our Teamwork, Timely accessing, better Techniques, generational Technology and productive Treatments are our elements of 5Ts, which all together enables us to achieve high performance and patient contentment with assured feedback. We have the required expertise with over a decade of experience in treating all types of neuro diseases and are reliable to deliver the best performance. Our first-class resources in the services we provide are capable of achieving the very highest standards of healthcare.</div>
             </div>
-            <div class="container_2_image">
+            <div class="container_2_image container_2_image_2">
                 <img src="../../assets/about/container_2_img_2.png" alt="">
             </div>
         </div>
