--- a/src/app/neurology/neurology.component.html
+++ b/src/app/neurology/neurology.component.html
@@ -1,3 +1,4 @@
+<div class="root_container">
 <app-specialities-design
 heading="Neurology"
 para_1="Neurology treats all the neurological diseases, including stroke, headache, epilepsy, coma, neuropathies, multiple sclerosis, myopathies, Parkinson’s disease, myasthenia gravis, and many more."
@@ -22,4 +23,5 @@ image="../../assets/specialiti/Neurology.png"
     about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
     description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
     ></app-doctor-structure>
+</div>
 </div>
