--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -10,8 +10,10 @@
             <app-accordion 
             [icon_1] = card.icon_1
             [icon_2] = card.icon_2 
-            [title] = card.title >
-                <div class="description">{{card.content}}</div>
+            [title] = card.title 
+            [description] = card.content
+            >
+            
             </app-accordion>
         </div>                 
     </div>
