--- a/src/app/accordion/accordion.component.css
+++ b/src/app/accordion/accordion.component.css
@@ -5,10 +5,11 @@
     padding: 10px;
     margin-bottom: 10px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    /* transition:  1s ease; */
     background: #fff;
+    border-radius: 20px;
   }
-  
+
   .accordion-header {
     font-weight: bold;
     display: flex;
@@ -38,6 +39,42 @@
     margin-top: 10px;
     height: 150px;
     transition: 1s ease;
+    animation: dropdown 0.5s linear;
+  }
+
+  .ng_content{
+    margin: 5% 5% 0 5%;
+  }
+
+  .description{
+    color: #FFF;
+    font-family: "Open Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    transition: 1s;
+}
+
+.dropdown-close{
+    opacity: 0;
+    transition: 0.5s;
+    height: 0;
+    color: black;
+    padding: 0;
+    margin: 0;
+}
+
+  @keyframes dropdown{
+    from{
+      height: 0px;
+    }
+
+    to{
+      height: 150px;
+    }
   }
   
   .accordion.active {
