--- a/src/app/cardiology/cardiology.component.css
+++ b/src/app/cardiology/cardiology.component.css
@@ -13,7 +13,7 @@
 
 .speciality_contents{
     margin-top: 150px;
-    padding: 10%;
+    padding: 0 10%;
 }
 
 .speciality_img img{
@@ -68,6 +68,7 @@
 
 .speciality_lists{
     margin-top: 20px;
+    margin-left: 3%;
 }
 
 /* container 2 */
@@ -76,7 +77,7 @@
     display: flex;
     justify-content: center;
     gap: 50px;
-    padding: 5% 0;
+    padding:  0;
 }
 
 .team_heading{
@@ -87,7 +88,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 100px;
 }
 
 .doc_1{
