--- a/src/app/dermotology/dermotology.component.html
+++ b/src/app/dermotology/dermotology.component.html
@@ -1,3 +1,4 @@
+<div class="root_container">
 <app-specialities-design heading = "Dermatology" para_1 = "Your skin is your largest, heaviest organ, and it has many important functions. It protects you from heat, cold, germs, and dangerous substances. It’s also a great indicator of your overall health—cchanges in the color or feel of your skin can be a sign of a medical problem. It’s important to take proper care of your skin and be aware of its overall health." para_2 = "Our dermatologists are experts in diagnosing and treating skin, hair, and nail diseases, and they can manage cosmetic disorders, including hair loss and scars" image = "../../assets/specialiti/dermatology.png"></app-specialities-design>
 
 <div class="team_heading">Meet Our Medical specialists</div>
@@ -18,4 +19,5 @@
     about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
     description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
     ></app-doctor-structure>
+</div>
 </div>
