--- a/src/app/endocrine-surgery/endocrine-surgery.component.html
+++ b/src/app/endocrine-surgery/endocrine-surgery.component.html
@@ -1,20 +1,14 @@
+<div class="root_container">
 <app-specialities-design heading = "Endocrine Surgeries" para_1 = "Endocrine surgery is a surgical subspeciality focusing on surgery of the endocrine glands, including the thyroid gland, the parathyroid glands, the adrenal glands, the glands of the endocrine pancreas, and some neuroendocrine glands. Some of the surgical procedures that are performed include: Breast: Mastectomies (modified radical and simple), Excisions, I&D of abscess Thyroid: Total, subtotal thyroidectomies Parotid, submandibular gland surgeries" image = '../../assets/specialiti/Endocrine.png'></app-specialities-design>
 <div class="team_heading">Meet Our Medical specialists</div>
 <div class="doctor_details">
-    <app-doctor-structure 
-    image = "../../assets/doctor-1.png" 
-    name = "Dr. Bhoopal" 
-    desgination = "Consultant- Psychiatrist"
-    qualification = "MBBS, MD - Psychiatry"
-    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+    <app-doctor-structure *ngFor = 'let doctor of doctors'
+    image = {{doctor.image}}
+    name = "{{doctor.name}}" 
+    desgination = {{doctor.designation}}
+    qualification = {{doctor.qualification}}
+    about = {{doctor.about}}
+    description = ""
     ></app-doctor-structure>
-    <app-doctor-structure 
-    image = "../../assets/doctor-1.png" 
-    name = "Dr. Bhoopal" 
-    desgination = "Consultant- Psychiatrist"
-    qualification = "MBBS, MD - Psychiatry"
-    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
-    ></app-doctor-structure>
+</div>
 </div>
