--- a/src/app/obstetrics/obstetrics.component.css
+++ b/src/app/obstetrics/obstetrics.component.css
@@ -6,7 +6,7 @@
     background-image: url('../../assets/specialiti/Obstetrics_bg.png');
     background-size: cover;
     /* background-repeat: no-repeat; */
-    height: 120vh;
+    height: 920px;;
     display: flex;
     flex-direction: column;
     justify-content: center;
