--- a/src/app/obstetrics/obstetrics.component.html
+++ b/src/app/obstetrics/obstetrics.component.html
@@ -82,22 +82,13 @@
 
     <div class="team_heading">Meet Our Medical specialists</div>
     <div class="doctor_details">
-        <app-doctor-structure 
-        image = "../../assets/doctor-1.png" 
-        name = "Dr. Bhoopal" 
-        desgination = "Consultant- Psychiatrist"
-        qualification = "MBBS, MD - Psychiatry"
-        about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-        description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
-        ></app-doctor-structure>
-        <app-doctor-structure 
-        image = "../../assets/doctor-1.png" 
-        name = "Dr. Bhoopal" 
-        desgination = "Consultant- Psychiatrist"
-        qualification = "MBBS, MD - Psychiatry"
-        about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-        description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
+        <app-doctor-structure *ngFor = 'let doctor of doctors'
+        image = {{doctor.image}}
+        name = "{{doctor.name}}" 
+        desgination = {{doctor.designation}}
+        qualification = {{doctor.qualification}}
+        about = {{doctor.about}}
+        description = ""
         ></app-doctor-structure>
     </div>
-
 </div>
