--- a/src/app/radiology/radiology.component.css
+++ b/src/app/radiology/radiology.component.css
@@ -68,6 +68,7 @@
 
 .speciality_lists{
     margin-top: 20px;
+    margin-left: 3%;
 }
 
 /* container 2 */
@@ -87,7 +88,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 100px;
 }
 
 .doc_1{
