--- a/src/app/urology/urology.component.css
+++ b/src/app/urology/urology.component.css
@@ -78,6 +78,7 @@
 
 .speciality_lists{
     margin-top: 20px;
+    margin-left: 3%;
 }
 
 /* container 2 */
@@ -97,7 +98,6 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 100px;
 }
 
 .doc_1{
