--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin: 70px 0;
+    margin: 0 0 70px 0;
 }
 
 @media (max-width : 500px){
@@ -32,3 +32,4 @@
         align-items: center;
     }
 }
+
