--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,3 @@
 <app-navbar></app-navbar>
-<!-- <app-contact-form></app-contact-form> -->
-<!-- <app-about></app-about> -->
-<!-- <router-outlet></router-outlet> -->
-<!-- <app-cardiology /> -->
-<!-- <app-anesthesia></app-anesthesia> -->
-<!-- <app-dermotology/> -->
-<!-- <app-endocrine-surgery></app-endocrine-surgery> -->
-<app-radiology></app-radiology>
-<!-- <app-surgery></app-surgery> -->
-<!-- <app-obstetrics></app-obstetrics> -->
-<!-- <app-pediatrician /> -->
-<!-- <app-vascular-surgery></app-vascular-surgery> -->
-<!-- <app-about></app-about> -->
-<!-- <app-services/> -->
- <!-- <app-home/> -->
-<!-- <app-urology></app-urology> -->
-<!-- <app-blog></app-blog> -->
-<!-- <app-blog-post></app-blog-post> -->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
