--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -271,7 +271,7 @@ text-align: center;
         margin-left: 47px;
     }
     .footer-container{
-        height: 117vh;
+        height: 652px;
     }
 
     .footer-section {
