doctors updated in speciality page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -332,3 +332,13 @@
     </div>
   </div>
 </div>
+
+<div class="testimonials">
+  <h2 class="doc-con-heading">Testimonials</h2>
+  <iframe src="https://6919edbf6e5a489885f7da77a013a5f4.elf.site" frameborder="0" class = "google_reviews"></iframe>
+</div>
+
+<div class="testimonials">
+  <h2 class="doc-con-heading">Our Latest Posts</h2>
+  <iframe src="https://018221efbc6a446296861bd13a90c9c8.elf.site" frameborder="0" class = "insta_feed"></iframe>
+</div>
