--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1109,7 +1109,21 @@ color: #322875;
   box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
 }
 
+.google_reviews{
+  width: 100%;
+  height: 400px;
+  margin-top: 50px;
+}
 
+.testimonials{
+  margin-top: 100px;
+}
+
+.insta_feed{
+  width: 100%;
+  height: 500px;
+  margin-top: 50px;
+}
 
 /* Responsive Design */
 
