--- a/src/app/vascular-surgery/vascular-surgery.component.html
+++ b/src/app/vascular-surgery/vascular-surgery.component.html
@@ -1,22 +1,5 @@
 <div class="root_container">
 <app-specialities-design heading = "Vascular Surgeries" para_1 = "Vascular surgery is a surgical subspeciality in which diseases of the vascular system, or arteries, veins, and lymphatic circulation, are managed by medical therapy, minimally invasive catheter procedures, and surgical reconstruction. Some of the vascular surgeries that our team performs include varicose vein Trendelenburg operation, diabetic foot care, and laser procedures." image = '../../assets/specialiti/vascular.png'></app-specialities-design>
-<div class="team_heading">Meet Our Medical specialists</div>
-<div class="doctor_details">
-    <app-doctor-structure 
-    image = "../../assets/doctor-1.png" 
-    name = "Dr. Bhoopal" 
-    desgination = "Consultant- Psychiatrist"
-    qualification = "MBBS, MD - Psychiatry"
-    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
-    ></app-doctor-structure>
-    <app-doctor-structure 
-    image = "../../assets/doctor-1.png" 
-    name = "Dr. Bhoopal" 
-    desgination = "Consultant- Psychiatrist"
-    qualification = "MBBS, MD - Psychiatry"
-    about = "Aksha Hospital is the brainchild of Dr Bhoopal TS."
-    description = "It is the result of his dedication and hard work of his lifetime in the medical field. Dr Bhoopal TS, an eminent doctor, working since its inception in Sri Jayadeva Institute of Cardiology..."
-    ></app-doctor-structure>
-</div>
+<div class="team_heading">Meet Our Medical Specialists</div>
+
 </div>
