--- a/src/app/endocrine-surgery/endocrine-surgery.component.html
+++ b/src/app/endocrine-surgery/endocrine-surgery.component.html
@@ -9,6 +9,7 @@
     qualification = {{doctor.qualification}}
     about = {{doctor.about}}
     description = ""
+    slug={{doctor.slug}}
     ></app-doctor-structure>
 </div>
 </div>
