--- a/src/app/ent/ent.component.html
+++ b/src/app/ent/ent.component.html
@@ -16,6 +16,7 @@ image="../../assets/specialiti/Ent.png"
     qualification = {{doctor.qualification}}
     about = {{doctor.about}}
     description = ""
+    slug={{doctor.slug}}
     ></app-doctor-structure>
 </div>
 </div>
