--- a/src/app/doctor-details/doctor-details.component.css
+++ b/src/app/doctor-details/doctor-details.component.css
@@ -25,7 +25,54 @@
     max-width: 300px;
     margin-right: 20px;
   }
+  @keyframes rotate {
+    100% {
+      transform: rotate(1turn);
+    }
+  }
   
+  .doctor-image {
+    position: relative;
+    z-index: 0;
+    width: 300px;
+    height: 420px;
+    border-radius: 10px;
+    overflow: hidden;
+    /* padding: 2rem; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: -2;
+      left: -50%;
+      top: -50%;
+      width: 200%;
+      height: 200%;
+      background-color: #fff;
+      background-repeat: no-repeat;
+      background-size: 50% 50%, 50% 50%;
+      background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+      background-image: linear-gradient(#E0619E,#E0619E), linear-gradient(#0F96B4, #0F96B4), linear-gradient(#332876, #332876);
+      animation: rotate 4s linear infinite;
+    }
+    
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: -1;
+      left: 6px;
+      top: 6px;
+      width: calc(100% - 12px);
+      height: calc(100% - 12px);
+      background: white;
+      border-radius: 5px;
+    }
+  }
   .doctor-image img {
     width: 100%;
     border-radius: 10px;
@@ -170,7 +217,7 @@ color: #000;
     display: block;
     object-fit: cover; /* Ensures the image covers the container without distortion */
     margin-top: 15px; 
-    box-shadow: -25px 25px 0 #aacdf3;
+    /* box-shadow: -25px 25px 0 #aacdf3; */
     border-radius: 20px;
     /* padding-right: 40px; */
     /* Adjust as needed for vertical alignment */
