--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1113,16 +1113,19 @@ color: #322875;
   width: 100%;
   height: 400px;
   margin-top: 50px;
+  background: #F0F8FF;
 }
 
 .testimonials{
-  margin-top: 100px;
+  padding-top: 100px;
+  background: #F0F8FF;
 }
 
 .insta_feed{
   width: 100%;
-  height: 500px;
+  height: 600px;
   margin-top: 50px;
+  background: #F0F8FF;
 }
 
 /* Responsive Design */
