--- a/src/styles.css
+++ b/src/styles.css
@@ -28,5 +28,10 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .team_heading{
+        font-size: 24px;
+        padding: 10%;
+    }
 }
 
