--- a/src/app/doctor-details/doctor-details.component.css
+++ b/src/app/doctor-details/doctor-details.component.css
@@ -97,7 +97,7 @@ color: #000;
     font-size: 18px;
     /* font-weight: normal; */
     color: #000;
-    font-size: 24px;
+    /* font-size: 24px; */
 font-weight: 600;
   }
   
