doctor-page-details

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,15 +1,22 @@
 <div class="root_container">
     <div class="input">
-        <div class="input_container">
-            <input type="text" placeholder="Search Blog" name="" id="">
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
-    </div>
+
     <div class="page_heading">
         Blog
     </div>
+         <!-- <div class="input_container">
+            <input type="text" placeholder="Search Blog" [(ngModel)]="searchText" (input)="filterBlogs()" name="" id="">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div> -->
+        <div class="category-filter">
+            <select [(ngModel)]="selectedCategory" (change)="filterBlogs()">
+                <option value="">All Categories</option>
+                <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+            </select>
+        </div>
+    </div>
     <div class="container_1">
-        <div class="poster">
+        <div class="poster" *ngIf="featuredPost">
             <div class="poster_image">
                 <img [src]="featuredPost.featured_image_url" alt="">
             </div>
@@ -21,7 +28,7 @@
             </div>
         </div>
         <div class="blog_list">
-            <div *ngFor="let post of posts" [routerLink]="['/blog', post.slug]" class="post-link">
+            <div *ngFor="let post of filteredPosts" [routerLink]="['/blog', post.slug]" class="post-link">
                 <div class="list_poster_image">
                     <img [src]="post.featured_image_url" alt="">
                 </div>
