--- a/src/app/physiotherapy/physiotherapy.component.html
+++ b/src/app/physiotherapy/physiotherapy.component.html
@@ -1,7 +1,7 @@
 <div class="root_container">
 <app-specialities-design heading = "Physiotherapy" para_1 = "Physiotherapy is a health care profession that assists people to restore, maintain, and maximize their strength, function, movement, and overall well-being. The terms “physiotherapy” and “physical therapy” mean the same thing and are used interchangeably, as are the terms “physiotherapist” and “physical therapist.”." para_2 = "Our physiotherapists have in-depth knowledge of how the body works and specialized hands-on clinical skills to assess, diagnose, and treat symptoms of illness, injury, and disability. Physiotherapy includes rehabilitation, as well as prevention of injury and promotion of health and fitness. Physiotherapists often work in teams with other health professionals to help meet an individual’s health care needs." image = "../../assets/specialiti/Physiotherapy.png"></app-specialities-design>
 <div class="team_heading">Meet Our Medical specialists</div>
-<!-- <div class="doctor_details">
+<div class="doctor_details">
     <app-doctor-structure *ngFor = 'let doctor of doctors'
     image = {{doctor.image}}
     name = {{doctor.name}} 
@@ -11,5 +11,5 @@
     description = ""
     slug={{doctor.slug}}
     ></app-doctor-structure>
-</div> -->
+</div>
 </div>
