--- a/src/app/doctor-details/doctor-details.component.css
+++ b/src/app/doctor-details/doctor-details.component.css
@@ -280,11 +280,17 @@ color: #000;
   }
   @media (max-width:430px){
     .doctor-image{
-        margin: 0 0 0px 0;
-        max-width: 51%;
-        padding: 0;
-        position: relative;
-        left: 27%;
+      margin: 0 0 0px 0;
+      max-width: 75%;
+      padding: 0;
+      position: relative;
+      left: 20%;
+      width: 100%;
+      margin-top: 3rem;
+    }
+    .doctor-image img{
+      width: 200px;
+      height: 300px;
     }
 .doctor-details h1{
     font-size: 20px;
