--- a/src/app/gastro_surgery/surgery.component.html
+++ b/src/app/gastro_surgery/surgery.component.html
@@ -52,5 +52,17 @@
         about = {{doctor.about}}
         description = ""
         ></app-doctor-structure>
+        
     </div>
+    <div class="doctor_details">
+        <app-doctor-structure *ngFor = 'let doctor of doctor_2'
+        image = {{doctor.image}}
+        name = "{{doctor.name}}" 
+        desgination = {{doctor.designation}}
+        qualification = {{doctor.qualification}}
+        about = {{doctor.about}}
+        description = ""
+        ></app-doctor-structure>
+        </div>
     </div>
+    
