--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                       <li (click)="goToSpecialty('obsterics-and-gynecology')" (mouseenter)="onHover('obstetrics')" (mouseleave)="onLeave()"><img class="dot" src="../../assets/dot.svg">Obstetrics & Gynecologists</li>
                       <li (click)="goToSpecialty('surgery')" (mouseenter)="onHover('gastrosurgery')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Gastrosurgery</li>
                       <li (click)="goToSpecialty('pediatrics')"(mouseenter)="onHover('pediatrician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Pediatrician</li>
-                      <li (click)="goToSpecialty('endocrine-surgery')"(mouseenter)="onHover('endocrine')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Endocrine Surgeries</li>
+                      <li (click)="goToSpecialty('endocrine-surgery')"(mouseenter)="onHover('endocrine')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Endocrinology</li>
                       <li (click)="goToSpecialty('vascular-surgery')"(mouseenter)="onHover('vascular')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Vascular Surgeries</li>
                       <li (click)="goToSpecialty('orthopedic')"(mouseenter)="onHover('orthopedic')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">Orthopedic</li>
                       <li (click)="goToSpecialty('general-physician')"(mouseenter)="onHover('general_physician')" (mouseleave)="onLeave()"><img  class="dot" src="../../assets/dot.svg">General Physician</li>
