--- a/src/app/urology/urology.component.html
+++ b/src/app/urology/urology.component.html
@@ -21,5 +21,16 @@
     <!-- doctor details -->
 
     <div class="team_heading">Meet Our Medical specialists</div>
+    <div class="doctor_details">
+        <app-doctor-structure *ngFor = 'let doctor of doctors'
+        image = {{doctor.image}}
+        name = {{doctor.name}} 
+        desgination = {{doctor.designation}}
+        qualification = {{doctor.qualification}}
+        about = {{doctor.about}}
+        description = ""
+        slug={{doctor.slug}}
+        ></app-doctor-structure>
+    </div>
     
 </div>
