--- a/src/app/vascular-surgery/vascular-surgery.component.html
+++ b/src/app/vascular-surgery/vascular-surgery.component.html
@@ -1,5 +1,16 @@
 <div class="root_container">
 <app-specialities-design heading = "Vascular Surgeries" para_1 = "Vascular surgery is a surgical subspeciality in which diseases of the vascular system, or arteries, veins, and lymphatic circulation, are managed by medical therapy, minimally invasive catheter procedures, and surgical reconstruction. Some of the vascular surgeries that our team performs include varicose vein Trendelenburg operation, diabetic foot care, and laser procedures." image = '../../assets/specialiti/vascular.png'></app-specialities-design>
 <div class="team_heading">Meet Our Medical Specialists</div>
+<div class="doctor_details">
+    <app-doctor-structure *ngFor = 'let doctor of doctors'
+    image = {{doctor.image}}
+    name = {{doctor.name}}
+    desgination = {{doctor.designation}}
+    qualification = {{doctor.qualification}}
+    about = {{doctor.about}}
+    description = ""
+    slug={{doctor.slug}}
+    ></app-doctor-structure>
+</div>
 
 </div>
