--- a/src/app/gastro_surgery/surgery.component.html
+++ b/src/app/gastro_surgery/surgery.component.html
@@ -51,6 +51,7 @@
         qualification = {{doctor.qualification}}
         about = {{doctor.about}}
         description = ""
+        slug="{{doctor.slug}}"
         ></app-doctor-structure>
         
     </div>
@@ -62,6 +63,7 @@
         qualification = {{doctor.qualification}}
         about = {{doctor.about}}
         description = ""
+        slug="{{doctor.slug}}"
         ></app-doctor-structure>
         </div>
     </div>
