updated doctors details and family photo

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -37,7 +37,7 @@
         font-style: normal;
         font-weight: 600;
         text-align: center;
-        margin-top: 100px;
+        margin-top: 180px;
     }
 
     .container_1_para{
@@ -76,7 +76,7 @@
 
     .vision_heading{
         color: #FFF;
-        font-family: Poppins;
+        font-family: "Poppins";
         font-size: 20px;
         font-style: normal;
         font-weight: 700;
