--- a/src/app/endocrine-surgery/endocrine-surgery.component.html
+++ b/src/app/endocrine-surgery/endocrine-surgery.component.html
@@ -1,6 +1,6 @@
 <div class="root_container">
 <app-specialities-design heading = "Endocrinology" para_1 = "Endocrine surgery is a surgical subspeciality focusing on surgery of the endocrine glands, including the thyroid gland, the parathyroid glands, the adrenal glands, the glands of the endocrine pancreas, and some neuroendocrine glands. Some of the surgical procedures that are performed include: Breast: Mastectomies (modified radical and simple), Excisions, I&D of abscess Thyroid: Total, subtotal thyroidectomies Parotid, submandibular gland surgeries" image = '../../assets/specialiti/Endocrine.png'></app-specialities-design>
-<div class="team_heading">Meet Our Medical specialists</div>
+<div class="team_heading">Meet Our Medical Specialists</div>
 <div class="doctor_details">
     <app-doctor-structure *ngFor = 'let doctor of doctors'
     image = {{doctor.image}}
