--- a/src/app/pediatrician/pediatrician.component.html
+++ b/src/app/pediatrician/pediatrician.component.html
@@ -53,7 +53,7 @@
 
     <!-- doctors -->
 
-    <div class="team_heading">Meet Our Medical specialists</div>
+    <div class="team_heading">Meet Our Medical Specialists</div>
 
     <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctors'
