--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,9 +5,10 @@
         <div class="container_1_box_1">
             <div class="container_1_content">
                 <div class="heading">ABOUT AKSHA HOSPITAL</div>
-                <div class="container_1_para">Aksha Hospital is located in Jayanagar, Bengaluru. The hospital was set up with a vision of providing compassionate, ethical, innovative and affordable global healthcare services. We hope to achieve this by making the best use of their resources and bringing about innovation in the field of medicine.</div>
-                <div class="container_1_para">Our team wants to bring in holistic, accessible and integrated healthcare to the doorstep of every patient, and strongly believe in the idea of providing care with compassion.</div>
-                <div class="container_1_para">Every professional at the hospital is committed to providing world-class healthcare by encouraging their highly qualified professionals to deliver quality service.</div>
+                <div class="container_1_para">Aksha Hospital, a 50-bedded multi-specialty hospital located in Jayanagar, Bengaluru. Founded by Dr. Bhoopal with the vision of providing compassionate, ethical, and affordable healthcare services. Our hospital is dedicated to offering world-class medical care across various specialties, including gastroenterology, obstetrics, gynecology, pediatrics, orthopaedics and more. Our highly experienced team of doctors and specialists ensures that each patient receives the highest standard of care and attention.</div>
+                <div class="container_1_para"></div>
+                <div class="container_1_para"></div>
+                <div class="container_1_para">At Aksha Hospital, we are committed to delivering holistic, accessible and integrated healthcare. Our approach prioritizes the well-being of our patients by using state-of-the-art facilities and cutting-edge medical technology. We strive to make global healthcare services innovative, affordable, and within reach of every patient. Our focus on compassionate care is at the heart of everything we do, ensuring that every professional at our hospital is dedicated to delivering quality service and fostering a welcoming environment for routine checkups as well as specialized treatments.</div>
             </div>
             <!-- container_1_image -->
             <div class="container_1_image">
@@ -76,6 +77,8 @@
          </div>
 
     </div>
+
+    <app-family />
 
     <!-- container 2 -->
     <div class="container_2">
