--- a/src/app/ent/ent.component.html
+++ b/src/app/ent/ent.component.html
@@ -7,7 +7,7 @@ para_3="The department also provides audiology, voice, and speech therapy as all
 image="../../assets/specialiti/Ent.png"
 ></app-specialities-design>
 
-<div class="team_heading">Meet Our Medical specialists</div>
+<div class="team_heading">Meet Our Medical Specialists</div>
 <div class="doctor_details">
     <app-doctor-structure *ngFor = 'let doctor of doctors'
     image = {{doctor.image}}
