--- a/src/app/gastro_surgery/surgery.component.html
+++ b/src/app/gastro_surgery/surgery.component.html
@@ -42,7 +42,7 @@
     </div>
     
 
-    <div class="team_heading">Meet Our Medical specialists</div>
+    <div class="team_heading">Meet Our Medical Specialists</div>
     <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctors'
         image = {{doctor.image}}
