--- a/src/app/nephrology/nephrology.component.html
+++ b/src/app/nephrology/nephrology.component.html
@@ -1,6 +1,6 @@
 <div class="root_container">
 <app-specialities-design heading = "Nephrology" para_1 = "At the Department of Nephrology, we specialize in the comprehensive management of various non-failure-related kidney disorders. Our team expertly handles conditions such as nephrotic syndrome, chronic kidney disease (before the dialysis stage), and acute kidney injuries. We focus on interventions that prevent disease progression and maintain kidney health, using the latest research and treatment modalities tailored to each patient’s specific needs. Our proactive approach ensures thorough care for those dealing with the complexities of renal health, emphasizing preservation and enhancement of kidney function." para_2="Our dedicated team of nephrologists is committed to providing expert care, utilizing the latest advancements in medical treatment and technology to enhance the quality of life for our patients. We understand the challenges that come with kidney diseases and strive to offer solutions that meet the unique needs of each individual patient." image = "../../assets/specialiti/Nephrology.png"></app-specialities-design>
-<div class="team_heading">Meet Our Medical specialists</div>
+<div class="team_heading">Meet Our Medical Specialists</div>
 <div class="doctor_details">
     <app-doctor-structure *ngFor = 'let doctor of doctors'
     image = {{doctor.image}}
