--- a/src/app/radiology/radiology.component.html
+++ b/src/app/radiology/radiology.component.html
@@ -23,7 +23,7 @@
 
     <!-- doctor details -->
 
-    <div class="team_heading">Meet Our Medical specialists</div>
+    <div class="team_heading">Meet Our Medical Specialists</div>
     <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctors'
         image = {{doctor.image}}
